# Cold-Outreach-

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: business-developer.md  growth-commander.md  onboarding-agent.md
config/: tooling.yaml
db/: schema.sql
docs/: architecture.md
src/cold_outreach_flow/: __init__.py  main.py
src/cold_outreach_flow/crews/: __init__.py
src/cold_outreach_flow/crews/growth_crew/: __init__.py  growth_crew.py
src/cold_outreach_flow/crews/growth_crew/config/: agents.yaml  tasks.yaml
src/cold_outreach_flow/tools/: __init__.py  data_tools.py  notification_tools.py  research_tools.py
