[project]
name = "cold-outreach"
version = "0.1.0"
description = "CrewAI flow for Sentinel-CMMC cold outreach and growth operations."
authors = [{ name = "Sean Murrill" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai>=1.14.0",
]

[project.scripts]
cold_outreach = "cold_outreach_flow.main:kickoff"
kickoff = "cold_outreach_flow.main:kickoff"
plot = "cold_outreach_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cold_outreach_flow"]

[tool.crewai]
type = "flow"
